Fix overlap between describe_state_form_2 and sidebar.

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1186,11 +1186,18 @@ display: inline-block;
 
 .describe_state_form {
 background-color: rgba(36, 64, 144, 0.2);
-padding: 30px 20px;
-margin: 30px 0px;
-width: 600px;
 border-radius: 4px;
 box-shadow: 0px 0px 20px #ccc;
+}
+
+#describe_state_form_1 {
+  width: 600px;
+  padding: 30px 20px;
+  margin: 30px 0px;
+}
+#describe_state_form_2 {
+  padding: 10px;
+  margin: 30px 20px 0px 0px;
 }
 
 #user_profile_header h1{
